k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ace
  labels:
    name: ace
    environment: production
